[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_agent_ppo"
version = "0.0.1"
description = "A short description of your project"
authors = [
    { name = "John Viljoen", email = "johnviljoen2@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["your", "project", "keywords"]

dependencies = [
    "matplotlib",
    "tqdm",
    "jax[cuda12]",
    "equinox",
    "brax",
    "IPython"
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
# include = ["models"]  # package names should match these glob patterns (["*"] by default)
# exclude = ["my_package.tests*"]  # exclude packages matching these glob patterns (empty by default)
# namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-dir]
multi_agent_ppo = ""